# EzConfy

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.yaml  generated.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  docs.yml  dod.yml  publish.yml  python-tests.yml  type-check.yml
codegen/: index.html
docs/: api_reference.md  codegen.md  getting-started.md  index.md  instantiation.md  multi-file.md  placeholders.md  schema.md
docs/stylesheets/: extra.css
examples/mnist/: config.yaml  nn.py  schema.yaml  train.py
getting-started/: index.html
instantiation/: index.html
multi-file/: index.html
placeholders/: index.html
schema/: index.html
search/: search_index.json
src/easyconfig/: config_builder.py  instantiator.py  module_loader.py  parser.py
src/ezconfy/: __init__.py  cli.py  config_builder.py  instantiator.py  io.py  schema_parser.py
src/ezconfy/codegen/: __init__.py  emitter.py  extractors.py  generator.py  type_utils.py  walker.py
src/ezconfy/core/: __init__.py  config_builder.py  exceptions.py  instantiator.py  module_loader.py  schema_parser.py
tests/: conftest.py  test_cli.py  test_config_builder.py  test_parser.py
tests/codegen/: test_cli.py
tests/core/: test_config_builder.py  test_parser.py
